fix(dev-bar-menu): fixed visible page

--- a/src/app/components/categories/categories.component.scss
+++ b/src/app/components/categories/categories.component.scss
@@ -19,3 +19,8 @@
   -webkit-mask: var(--m);
   mask: var(--m);
 }
+
+.product-card{
+  height: 100%;
+  border-radius: unset;
+}
